# fan_out

./: Cargo.toml  README.md  load.py
configs/: local.yaml
src/: main.rs
src/config/: config.rs  load.rs  mod.rs  validation.rs
src/sharder/: hash.rs  shard.rs
src/sink/: file.rs  mod.rs
src/transport/: mod.rs  udp.rs
