[package]
name = "fan_out"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
log = { version = "0.4.29", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = "1.52.1"

